# CSGRayCasting

./: .gitignore  CSGRayCast.sln  CSGRayCasting.sln  README.md  big_city.txt  complex_scene.txt  difference_spheres.txt  dupa.txt  gen_scene.py  helix_complex.txt  industrial_complex.txt  mixed_ops_scene.txt  output.txt  single_sphere.txt  union_spheres.txt
CSGRayCast/: CMakeLists.txt  CSGRayCast.vcxproj  csg.h  loadfile.cpp  main.cu  rayCast.h  shape.h  tracer.cu  tracer.h
CSGRayCast/x64/Debug/: CSGRayCast.exe.recipe  main.cu-1236986098.deps  main.cu.cache  main.cu940716138.deps  tracer.cu-416259946.deps  tracer.cu.cache  tracer.cu481913114.deps  vc143.idb
CSGRayCast/x64/Debug/CSGRayCast.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSGRayCast.lastbuildstate  Cl.items.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CSGRayCast/x64/Release/: CSGRayCast.exe.recipe  CSGRayCast.iobj  CSGRayCast.ipdb  main.cu.cache  tracer.cu.cache
CSGRayCast/x64/Release/CSGRayCast.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSGRayCast.lastbuildstate  Cl.items.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CSGRayCasting/: CPU.h  CSGRayCasting.vcxproj  csg.cpp  csg.h  kernel.cu  main.cpp  scene.cpp  scene.h  shape.cpp  shape.cu  shape.h
x64/Debug/: CSGRayCast.exp
x64/Release/: CSGRayCast.exp
